Update nsfwguard to better check subreddit about.json, using the match from the regex as the url also now better handles meta subreddits regardless of subdomain also now explictly redirects on r/randnsfw instead of resolving it Removed body css from popupbox.css so that it doesn't mess with every webpage it's injected into, plus some minor formating Hardcoded 0px margin to body tag in popupbox.html Popupbox iframe no longer stuck in a footer, added to the body element

--- a/data/popupbox.css
+++ b/data/popupbox.css
@@ -1,8 +1,3 @@
-body {
-  top: -25px;
-  margin: 0;
-  overflow: auto;
-}
 .pbpb {
   z-index: 99999!important;
 }
@@ -21,14 +16,14 @@ div.pboverride {
   position: initial;
 }
 span#emText {
-    color: #fff!important;
+  color: #fff!important;
 }
 #religiousEnabledCheckbox {
-    -webkit-appearance: checkbox!important;
-    appearance: checkbox!important;
-    height: initial!important;
-    width: initial!important;
-    margin: 5px 3px 3px 4px!important;
+  -webkit-appearance: checkbox!important;
+  appearance: checkbox!important;
+  height: initial!important;
+  width: initial!important;
+  margin: 5px 3px 3px 4px!important;
 }
 input#religiousEnabledCheckbox:focus {
   box-shadow: initial!important;
@@ -37,16 +32,16 @@ input#religiousEnabledCheckbox:before {
   content: none!important;
 }
 .religiousSetting {
-    position: absolute!important;
-    top: 11%!important;
-    left: 2%!important;
-    background: #73716e!important;
-    border-radius: 3px!important;
-    display: flex!important;
-    align-items: center!important;
-    justify-content: center!important;
-    padding-right: 4px!important;
-    width: 78.484px!important;
+  position: absolute!important;
+  top: 11%!important;
+  left: 2%!important;
+  background: #73716e!important;
+  border-radius: 3px!important;
+  display: flex!important;
+  align-items: center!important;
+  justify-content: center!important;
+  padding-right: 4px!important;
+  width: 78.484px!important;
 }
 .religiousSetting:hover {
   background: #8B8986!important;
@@ -70,13 +65,13 @@ input#religiousEnabledCheckbox:before {
 }
 .panicbuttonpopupbox,
 .panicbuttonpopupbox:hover {
-    width: 250px!important;
-    position: fixed!important;
-    transition: top 0.5s ease-in-out!important;
-    border-style: outset!important;
-    border-width: 3px 3px 0px 3px;
-    padding: 0!important;
-    box-sizing: content-box;
+  width: 250px!important;
+  position: fixed!important;
+  transition: top 0.5s ease-in-out!important;
+  border-style: outset!important;
+  border-width: 3px 3px 0px 3px;
+  padding: 0!important;
+  box-sizing: content-box;
 }
 .panicbuttonpopupboxtop {
   -moz-user-select: none;
